update example
